--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,18 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sha2 = "0.10"
-rayon = "1.8"
+sha2 = { version = "0.10", features = ["asm"] }
+rayon = "=1.8.1" # 使用等号精确锁定版本
 clap = { version = "4.4", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 hex = "0.4"
-itoa = "1.0"
 crossbeam-channel = "0.5"
-
-[profile.release]
-lto = true
-codegen-units = 1
+itoa = "1.0"
+num_cpus = "1.16"
 
 [[bin]]
 name = "rust_cpu_pow"
